# quick

./: pyproject.toml
quick/: manage.py
quick/organisations/: admin.py  models.py  urls.py  views.py
quick/organisations/migrations/: 0001_initial.py
quick/organisations/templates/organisations/: index.html  organisation_form.html
quick/quick/: asgi.py  settings.py  urls.py  wsgi.py
quick/templates/: base_html.html
