[tool.poetry]
name = "quick"
version = "0.1.0"
description = ""
authors = ["WiInfFelix <schefflerfelix95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
